# text-to-cad

./: .gitignore  AGENTS.md  CONTRIBUTING.md  README.md  requirements-dev.txt
.claude-plugin/: marketplace.json
.github/: release.yml
.github/workflows/: prepare-release.yml  publish.yml  test.yml
docs/: next.config.ts  package-lock.json  package.json
models/robots/: README.md
plugins/: README.md
plugins/.claude-plugin/: marketplace.json
plugins/cad/: README.md
scripts/: README.md
scripts/bundle/: bundle-plugin.sh  bundle-skill.sh  bundle.sh
scripts/catalog/: upload-models-catalog.sh
scripts/check/: validate-plugins.sh
scripts/dev/: setup-plugin-symlink.sh  setup-skill-symlink.sh  setup-symlinks.sh  symlink-utils.sh
scripts/git-hooks/: pre-commit
scripts/github-workflows/: check-builds.sh  check-symlinks.sh
scripts/install/: install-skills.sh  uninstall-skills.sh
scripts/release/: bump-version.sh  check-version.sh  create-github-release.sh  publish-github-release.sh  sync-version.mjs
scripts/test/: common.sh  test-docs.sh  test-global.sh  test-js.sh  test-python.sh  test.sh
scripts/utils/: list-skills.sh
scripts/viewer/: download-viewer-models-catalog.sh  sync-cad-viewer-repo.sh  upload-viewer-models-catalog.sh
skills/bambu-labs/: SKILL.md
skills/cad/: SKILL.md
skills/cad-viewer/: SKILL.md
skills/gcode/: SKILL.md
skills/implicit-cad/: LICENSE  (+1 more)
tests/: test_skill_self_containment.py
viewer/: .env.example  README.md  package-lock.json  package.json  vercel.json  vite.config.mjs
viewer/moveit2_server/: pyproject.toml
(+363 files in other folders)
