[build-system]
requires = ["setuptools>=69"]
build-backend = "setuptools.build_meta"

[project]
name = "moveit2_server"
version = "0.1.16"
description = "Local MoveIt2 websocket server for SRDF solve and planning requests."
requires-python = ">=3.12"
dependencies = [
  "websockets>=12",
]

[project.scripts]
moveit2_server = "moveit2_server.server:main"

[tool.setuptools]
packages = ["moveit2_server"]

[tool.setuptools.package-dir]
moveit2_server = "moveit2_server"
